<resources>
    <string name="app_name">YouCMT</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip for now</string>
    <string name="login_to_youcmt">Login to YouCMT:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="choose_username">Pick a Username</string>
    <string name="username_hint">Select a Username?</string>
    <string name="email">E-mail</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="disclaimer">By registering, you agree to YouCMT\'s Terms of Service, which do not exist.</string>
    <string name="logged_in">You are successfully logged in!</string>
    <string name="sign_out">Sign out</string>
    <string name="video_info_message">The video will be embedded here or have a thumbnail</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="view_replies">View Replies</string>
    <string name="enter_video_url_hint">Enter video URL</string>
    <string name="search_video">Search Video</string>
    <string name="unfinished">This functionality is not yet enabled.</string>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <string name="just_now">Just now</string>
    <string name="no_comments">No comments found. Be the first!</string>
    <string name="add_comment">Add a comment…</string>
    <string name="replies">Replies</string>
    <string name="no_replies">No replies</string>
    <string name="add_reply">Add a reply</string>
    <string name="sign_in_up">Sign in/Sign up</string>
    <string name="flag">Flag</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="recovery_email">Enter your e-mail address</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="reset">Reset</string>
    <string name="enter_reset_code">Enter the reset code</string>
    <string name="new_password">New password</string>
    <string name="reenter_new_password">Re-enter new password</string>
    <string name="send_again">Send again?</string>
    <string name="reset_code_sent_message">Reset code sent</string>
    <string name="unknown_error">Unknown error, try again later!</string>
    <string name="invalid_email_error">Invalid e-mail</string>
    <string name="longer_username_error">Select a longer username.</string>
    <string name="mismatched_passwords_error">Passwords do not match!</string>
    <string name="weak_password_error">Choose a stronger password!</string>
    <string name="invalid_code_error">Invalid code</string>
    <string name="delete_comment_title">Delete comment?</string>
    <string name="delete_comment_prompt">Are you sure you want to delete this comment?</string>
    <string name="server_error">Unable to reach server!</string>
    <string name="update">Update</string>
    <string name="account_settings">Account</string>
    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="logo">App logo.</string>
    <string name="change_password">Change password</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_email">Change e-mail</string>
    <string name="current_password">Your current password</string>
    <string name="password_reset_toast">Password reset</string>
    <string name="comment_deleted_toast">Comment deleted</string>
    <string name="feature_unavailable">Not yet available!</string>
    <string name="new_email">Enter new e-mail</string>
    <string name="reenter_new_email">Re-enter e-mail</string>
    <string name="mismatched_emails_error">E-mail entries do not match!</string>
    <string name="account_label">Account: %1$s</string>
    <string name="error">ERROR</string>
    <string name="password_incorrect">Incorrect current password</string>
    <string name="same_passwords_error">Current password and new password are the same!</string>
    <string name="update_success">Profile updated successfully.</string>
    <string name="network_error">Network error! Check your internet connection.</string>
    <string name="comment_posted_toast">Comment posted!</string>
    <string name="security_error">Critical security error!</string>
    <string name="comment_updated">Comment updated</string>
    <string name="no_youtube_app_error">Error. Do you have the YouTube app installed?</string>
    <string name="login_again">Please log in again</string>
    <string name="whats_hot_button_label">What\'s Hot?</string>
    <string name="currently_discussed">Currently Discussed</string>
    <string name="no_videos_to_show">Sorry, no videos to show! Click to refresh.</string>
    <string name="unable_to_fetch_videos">Unable to fetch hot videos!</string>
    <string name="error_retrieving_vid">Error retrieving video!</string>
    <string name="register_title">Please Register!</string>
    <string name="register_info">Registered users can rate comments, add personalized avatars, select unique usernames, and more! Register now?</string>
    <string name="yes_excited">Yes!</string>
    <string name="change_avatar_prompt">Change your avatar?</string>
    <string name="error_404">Error code 404: Not Found</string>
    <string name="feedback_posted">Feedback posted!</string>
    <string name="login_to_rate">You must log in to rate comments!</string>
</resources>
