<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        tools:text="Video Title"
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:drawableRight="@drawable/ic_arrow_drop_down"/>
    <TextView
        tools:text="Video Description"
        android:id="@+id/video_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/comments"
        android:textAppearance="@style/TextAppearance.AppCompat"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_comment_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_comment"
            android:inputType="textAutoCorrect|textMultiLine"
            android:layout_toLeftOf="@id/send_button"
            android:layout_toStartOf="@id/send_button"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_send"
            android:id="@+id/send_button"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/no_comments_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_comments"
        android:visibility="gone"
        android:padding="4dp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/comment_rv"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_pb"
        android:visibility="gone"/>
</LinearLayout>