<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/replies"
                android:id="@+id/reply_tv"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="24sp"/>
            <ImageView
                android:id="@+id/close_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_close"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <include
        android:layout_marginTop="8dp"
        android:id="@+id/the_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/comment"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_reply_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_reply"
            android:inputType="textAutoCorrect|textMultiLine"
            android:layout_toLeftOf="@id/send_button"
            android:layout_toStartOf="@id/send_button"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_send"
            android:id="@+id/send_button"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/no_replies_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_replies"
        android:visibility="gone"
        android:padding="4dp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/comment_rv_reply"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_pb_reply"
        android:visibility="gone"/>
</LinearLayout>